# cangjie-extension

./: .gitignore  .gitmodules  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  LICENSE  README.md  SCRIPT_LAUNCHERS.md  add-pwsh7-config.ps1  build-test-all.ps1  build-test-report-detailed.md  build-test-report.md  build.rs  build.sh  bump-version.ps1  cangjie-tree-sitter.ps1  check-hex.ps1  check-ps1-syntax.ps1  copy_random_tests.ps1  copy_tests_simple.ps1  dependency-issue-analysis.md  extension.toml  extension.wasm  fix-ps1-encoding.ps1  generate-changelog.ps1  gui-script-launcher.ps1  operator-comparison.md  package.json  profile.ps1  ps1-validation-results.csv  run-ps-script.bat  script-launcher.ps1  setup-cangjie-sdk.ps1  setup-wasi-sdk.ps1  simple-tree-sitter.ps1  test-cangjie.ps1  test-deps.ps1  test-launcher.ps1  test-script.ps1  test-validation.ps1  (+18 more)
.devbrain/: .dss_initialized
.zed/: settings.json
assets/: build1.rs
debug_adapter_schemas/: Cangjie.json
docs/: configuration.md  extension.json  features.md  getting-started.md
examples/: basic.cj  enums.cj  functions.cj  interfaces.cj  structs.cj
keymaps/: cangjie.json
scripts/: build-grammar.js
snippets/: cangjie.json
src/: lib.rs
tests/: integration_test.rs  test2.cj  test5.cj
themes/: cangjie.json
tree-sitter-cangjie/: .gitignore  CHANGELOG.md  CMakeLists.txt  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  POWERSHELL7_CONFIG.md  Package.swift  README.md  go.mod  grammar.js  package copy.json  package.json  parser.exp  parser.lib  profile.ps1  pyproject.toml  setup-wasi-sdk.ps1  setup.py  test-wasm-module.ps1  test_python_binding.py  toolchain.json  tree-sitter.json  update-dependencies.ps1  validate-project-ps1.ps1
tree-sitter-cangjie/.github/workflows/: ci.yml  release.yml  update-dependencies.yml
tree-sitter-cangjie/bindings/c/: tree-sitter-cangjie.pc.in
tree-sitter-cangjie/bindings/go/: binding.go  binding_test.go
tree-sitter-cangjie/bindings/node/: binding.cc  index.js
tree-sitter-cangjie/bindings/python/tests/: test_binding.py
tree-sitter-cangjie/bindings/python/tree_sitter_cangjie/: __init__.py  binding.c
tree-sitter-cangjie/bindings/python/tree_sitter_yes/: __init__.py
tree-sitter-cangjie/bindings/rust/: build.rs  lib.rs
tree-sitter-cangjie/bindings/swift/TreeSitterCangjieTests/: TreeSitterYesTests.swift
tree-sitter-cangjie/bindings/swift/TreeSitterYes/: yes.h
tree-sitter-cangjie/docs/: configuration.md  getting-started.md
tree-sitter-cangjie/queries/: highlights.scm  injections.scm  locals.scm
tree-sitter-cangjie/scripts/: build-grammar.js
tree-sitter-cangjie/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-cangjie/test/: sample.cj
tree-sitter-cangjie/tests/: indent_test.cj  option_test.cj  raw_string_test.cj  simple_test.cj  test1.cj  test10.cj  test11.cj  test17.cj  test1_simple.cj
(+8 files in other folders)
