[package]
name = "cangjie-extension"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.91.0"
[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"

# serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4" # Optional, but useful for logging within the extension
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
cc = "1.0"


[profile.release]
panic = "abort"
strip = true # Helps reduce binary size
