[package]
name = "tree-sitter-yes"
description = "yes"
version = "0.1.2"
authors = ["SmiteWindows <no>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "yes"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/smitewindows/cangjie-extension"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
