[package]
name = "tree-sitter-cangjie"
description = "Cangjie language parser for Tree-sitter"
version = "0.1.2"
authors = ["Cangjie Team"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cangjie"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/SmiteWindows/cangjie-extension"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
